@@ -1,11 +1,23 @@
 {# begin {templatelocation} #}
+{# change root below to any glFusion group name, for example Logged-in Users. 
+you can also duplicate the php code and add another group name and css class to echo #}
 <div class="comment" style="padding-left:{indent}px; margin-bottom:10px; clear:right;">
-  <div class="commenttitle">
+    <div class="commenttitle
+<?php if (SEC_inGroup('root',$this->get_var('author_id'))) { echo " groupauthor"; } ?>
+{!if author_match}
+ articleauthor
+{!endif}
+">
     <span class="floatright" style="font-weight:normal; padding-right:10px;">{lang_authoredby} {author_link} {lang_on} {date}</span>
-	{title}
+    {title}
   </div>
-  <div style="vertical-align:top; padding:10px;">{comments}</div>
-  <div style="padding-bottom:10px; float:right;">
+  <div style="vertical-align:top; padding:10px;">
+{!if author_photo}
+    <span style="float:left; padding-right:10px;">{author_photo}</span>
+{!endif}
+    {comments}
+  </div>
+  <div style="padding-bottom:10px; float:right; clear:both;">
    <span {hide_if_preview}>
     [ {reply_option} {parent_link} {delete_option} <a href="{site_url}/comment.php?mode=view&amp;cid={cid}" rel="self bookmark" title="{lang_permlink}">#</a> ]
    </span>
