@@ -2,6 +2,8 @@ glFusion ChangeLog
 
 v1.2.0
 ------
+- Implemented profile photos and custom author and group css in comments (Mark & Eric)
+- Changed default comment mode to Nested (Eric)
 - Fixed orphaned p tag in story footer preview when editing a story (Eric)
 - CAPTCHA: Link and Calendar submissions did not work with reCAPTCHA (Mark)
 - Links Admin: Admin interface improvements and partial scrub (Mark H.)
